--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     .container {
       width: 500px;
       height: 500;
-      margin: 100px auto;
+      margin: 250px auto;
     }
   </style>
 </head>
 <body>
-  <div class="container>
+  <div class="container">
     <a href="https://stackoverflow.com/users/9144272/vipul-bhardwaj">
       <img src="https://stackoverflow.com/users/flair/9144272.png" width="208" height="58" 
       alt="profile for Vipul Bhardwaj at Stack Overflow, Q&amp;A for professional and enthusiast programmers" 
