--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
   <title> Linkedin-StackOverFlow-Attacher </title>
   <style>
+    body {
+      width: 980px;
+      height: 100%;
+    }
     .container {
       width: 500px;
-      height: 500;
-      margin: 250px auto;
+      height: 500px;
+      margin: 40vh auto;
+    }
+    .center {
+      padding: 20px auto;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <a href="https://stackoverflow.com/users/9144272/vipul-bhardwaj">
-      <img src="https://stackoverflow.com/users/flair/9144272.png" width="208" height="58" 
-      alt="profile for Vipul Bhardwaj at Stack Overflow, Q&amp;A for professional and enthusiast programmers" 
-      title="profile for Vipul Bhardwaj at Stack Overflow, Q&amp;A for professional and enthusiast programmers" />
-    </a>
+    <img class="center" src="https://stackoverflow.com/users/flair/9144272.png" width="208" height="58" 
+    alt="profile for Vipul Bhardwaj at Stack Overflow, Q&amp;A for professional and enthusiast programmers" 
+    title="profile for Vipul Bhardwaj at Stack Overflow, Q&amp;A for professional and enthusiast programmers" />
   </div>
 </body>
 </html>
