--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
       height: 100%;
     }
     .container {
-      width: 500px;
-      height: 500px;
-      margin: 40vh auto;
-    }
-    .center {
-      padding: 20px auto;
+      width: 300px;
+      height: 300px;
+      position: absolute;
+      left: 40%;
+      top: 50%;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <img class="center" src="https://stackoverflow.com/users/flair/9144272.png" width="208" height="58" 
+    <img src="https://stackoverflow.com/users/flair/9144272.png" width="208" height="58" 
     alt="profile for Vipul Bhardwaj at Stack Overflow, Q&amp;A for professional and enthusiast programmers" 
     title="profile for Vipul Bhardwaj at Stack Overflow, Q&amp;A for professional and enthusiast programmers" />
   </div>
